[package]
name = "color_operations"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Color operation helpers built on the color crate"
keywords = ["color", "matrix", "filter"]
categories = ["graphics"]
repository.workspace = true
rust-version.workspace = true

# Whilst we prepare the initial release
publish = false

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = ["color/std"]
libm = ["color/libm", "dep:libm"]

[dependencies]
color = { workspace = true, default-features = false }

[dependencies.libm]
version = "0.2.16"
optional = true

[lints]
workspace = true
